--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,8 @@ buildNumber.properties
 .mvn/timing.properties
 # https://github.com/takari/maven-wrapper#usage-without-binary-jar
 .mvn/wrapper/maven-wrapper.jar
+.swp
+dump_files/
 
 # Eclipse m2e generated files
 # Eclipse Core
