--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <junit.version>4.13.2</junit.version>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
+        <google.code.gson.version>2.9.0</google.code.gson.version>
     </properties>
 
     <dependencies>
@@ -38,6 +39,11 @@
             <artifactId>junit</artifactId>
             <version>${junit.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${google.code.gson.version}</version>
         </dependency>
     </dependencies>
 
